Refactor `LeagueOfLegendsAssetsService` and associated classes for improved readability and maintainability
- Replaced `record` with Lombok-based `LeagueOfLegendsAssetsProperties` class, aligning with updated coding conventions.
- Enhanced method formatting and exception handling in `LeagueOfLegendsAssetsService`.
- Improved unit tests by organizing and updating assertions, annotations, and mock setup.
- Updated code conventions to include library and framework preferences.